--- a/svelte-product/index.html
+++ b/svelte-product/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <svelte-product-ce></svelte-product-ce>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
